--- a/src/Countdown/Countdown.scss
+++ b/src/Countdown/Countdown.scss
@@ -121,6 +121,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 30px;
