--- a/src/Home.scss
+++ b/src/Home.scss
@@ -6,9 +6,9 @@
   align-items: center;
 }
 
-.contentBtn-container{
-  width: 60%;
-  height: 60vh;
+.contentBtn-container {
+  width: 50%;
+  height: 70vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -20,9 +20,12 @@
   background-color: #ffffff;
   background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  margin: 10px;
+  margin: 20px;
   border-radius: 10px;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  text-decoration: none;
+  color: #121212;
+  font-weight: 600;
 }
