--- a/src/Home.scss
+++ b/src/Home.scss
@@ -1,31 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@1,500&display=swap');
+
 .Home {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
 }
 
 .contentBtn-container {
-  width: 50%;
+  width: 600px;
   height: 70vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  background-color: #ffffff70;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .contentBtn {
   display: flex;
-  width: 26%;
+  width: 33%;
   background-color: #ffffff;
-  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+  // background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  margin: 20px;
+  margin: 1px;
   border-radius: 10px;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   text-decoration: none;
   color: #121212;
-  font-weight: 600;
+  
+}
+
+.contentBtn-number {
+  font-family: 'JetBrains Mono', monospace;
+  font-weight: 800;
+  font-size: 2rem;
+
+}
+
+.contentBtn-text {
+  font-size: 0.8rem;
+  font-weight: 300;
 }
