--- a/src/Components/Countdown.scss
+++ b/src/Components/Countdown.scss
@@ -114,7 +114,18 @@
     input{
         cursor: pointer;
     }
-    
+}
+
+.countdown-container-full{
+    text-align: center;
+    background-color: #ffffff;
+    background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100vh;
+    input{
+        cursor: pointer;
+    }
 }
 
 .counter{ 
