--- a/src/Components/Countdown.scss
+++ b/src/Components/Countdown.scss
@@ -110,7 +110,7 @@
     background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     width: 60%;
-    height: 60vh;
+    height: 65vh;
     input{
         cursor: pointer;
     }
@@ -132,9 +132,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10%;
+    margin-right: 10%;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 30px;
