--- a/src/Components/Quiz.scss
+++ b/src/Components/Quiz.scss
@@ -1,3 +1,7 @@
+.none {
+    display: none;
+}
+
 .background {
     width: 100%;
     height: 100vh;
@@ -129,3 +133,17 @@
     text-align: left;
     padding: 0 25%;
 }
+
+.answer {
+    text-align: left;
+    padding: 16px 20px;
+    margin: 8px 20%;
+    border-radius: 20px;
+    &.correct {
+        background-color: #8ae9813f;
+    }
+    &.wrong {
+        background-color: #e981813a;
+    }
+}
+
